--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@dingyi222666/koishi-plugin-chathub-preset-market",
   "description": "preset market for chathub",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "files": [
     "lib",
     "dist"
   ],
-  "license": "MIT",
+  "license": "AGPL-3.0",
   "keywords": [
     "chatbot",
     "koishi",
@@ -19,13 +19,22 @@
     "preset",
     "market"
   ],
-  "dependencies": {
+  "author": "dingyi222666 <dingyi222666@foxmail.com>",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ChatHubLab/chathub-preset-market.git",
+    "directory": "."
   },
+  "bugs": {
+    "url": "https://github.com/ChatHubLab/chathub-preset-market/issues"
+  },
+  "homepage": "https://github.com/ChatHubLab/chathub-preset-market#readme",
+  "dependencies": {},
   "devDependencies": {
     "koishi": "^4.13.7"
   },
   "peerDependencies": {
-    "@dingyi222666/koishi-plugin-chathub": "^1.0.0-alpha.14",
+    "@dingyi222666/koishi-plugin-chathub": "^1.0.0-alpha.15",
     "koishi": "^4.13.0"
   },
   "scripts": {
