--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@dingyi222666/koishi-plugin-chathub-preset-market",
   "description": "preset market for chathub",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "files": [
@@ -34,7 +34,7 @@
     "koishi": "^4.13.9"
   },
   "peerDependencies": {
-    "@dingyi222666/koishi-plugin-chathub": "^1.0.0-alpha.15",
+    "@dingyi222666/koishi-plugin-chathub": "^1.0.0-beta.0",
     "koishi": "^4.13.6"
   },
   "scripts": {
