--- a/package.json
+++ b/package.json
@@ -31,10 +31,11 @@
   "homepage": "https://github.com/ChatHubLab/chathub-preset-market#readme",
   "dependencies": {},
   "devDependencies": {
-    "koishi": "^4.13.9"
+    "koishi": "^4.14.2",
+    "@dingyi222666/koishi-plugin-chathub": "^1.0.0-beta.5"
   },
   "peerDependencies": {
-    "@dingyi222666/koishi-plugin-chathub": "^1.0.0-beta.2",
+    "@dingyi222666/koishi-plugin-chathub": "^1.0.0-beta.5",
     "koishi": "^4.13.6"
   },
   "scripts": {
