--- a/package.json
+++ b/package.json
@@ -1,57 +1,57 @@
 {
-  "name": "@dingyi222666/koishi-plugin-chathub-preset-market",
-  "description": "preset market for chathub",
-  "version": "1.0.8",
-  "main": "lib/index.js",
-  "typings": "lib/index.d.ts",
-  "files": [
-    "lib",
-    "dist"
-  ],
-  "license": "AGPL-3.0",
-  "keywords": [
-    "chatbot",
-    "koishi",
-    "plugin",
-    "service",
-    "chatgpt",
-    "chathub",
-    "preset",
-    "market"
-  ],
-  "author": "dingyi222666 <dingyi222666@foxmail.com>",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/ChatHubLab/chathub-preset-market.git",
-    "directory": "."
-  },
-  "bugs": {
-    "url": "https://github.com/ChatHubLab/chathub-preset-market/issues"
-  },
-  "homepage": "https://github.com/ChatHubLab/chathub-preset-market#readme",
-  "dependencies": {},
-  "devDependencies": {
-    "koishi": "^4.15.3",
-    "@dingyi222666/koishi-plugin-chathub": "^1.0.0-beta.10"
-  },
-  "peerDependencies": {
-    "@dingyi222666/koishi-plugin-chathub": "^1.0.0-beta.10",
-    "koishi": "^4.15.3"
-  },
-  "scripts": {
-    "build": "yakumo build",
-    "bump": "yakumo version",
-    "dep": "yakumo upgrade",
-    "pub": "yakumo publish"
-  },
-  "koishi": {
-    "description": {
-      "zh": "为 ChatHub 提供预设仓库服务的插件"
+    "name": "koishi-plugin-chatluna-preset-market",
+    "description": "preset market for chatluna",
+    "version": "1.0.8",
+    "main": "lib/index.js",
+    "typings": "lib/index.d.ts",
+    "files": [
+        "lib",
+        "dist"
+    ],
+    "license": "AGPL-3.0",
+    "keywords": [
+        "chatbot",
+        "koishi",
+        "plugin",
+        "service",
+        "chatgpt",
+        "chathub",
+        "preset",
+        "market"
+    ],
+    "author": "dingyi222666 <dingyi222666@foxmail.com>",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/ChatLunaLab/chatluna-preset-market.git",
+        "directory": "."
     },
-    "service": {
-      "required": [
-        "chathub"
-      ]
+    "bugs": {
+        "url": "https://github.com/ChatLunaLab/chatluna-preset-market/issues"
+    },
+    "homepage": "https://github.com/ChatLunaLab/chatluna-preset-market#readme",
+    "dependencies": {},
+    "devDependencies": {
+        "koishi": "^4.15.3",
+        "koishi-plugin-chatluna": "^1.0.0-beta.10"
+    },
+    "peerDependencies": {
+        "koishi-plugin-chatluna": "^1.0.0-beta.10",
+        "koishi": "^4.15.3"
+    },
+    "scripts": {
+        "build": "yakumo build",
+        "bump": "yakumo version",
+        "dep": "yakumo upgrade",
+        "pub": "yakumo publish"
+    },
+    "koishi": {
+        "description": {
+            "zh": "为 ChatLuna 提供预设仓库服务的插件"
+        },
+        "service": {
+            "required": [
+                "chathub"
+            ]
+        }
     }
-  }
 }
