--- a/package.json
+++ b/package.json
@@ -1,13 +1,31 @@
 {
     "name": "koishi-plugin-chatluna-preset-market",
     "description": "preset market for chatluna",
-    "version": "1.0.12",
-    "main": "lib/index.js",
+    "version": "1.0.13",
+    "main": "lib/index.cjs",
+    "module": "lib/index.mjs",
     "typings": "lib/index.d.ts",
     "files": [
         "lib",
         "dist"
     ],
+    "exports": {
+        ".": {
+            "import": "./lib/index.mjs",
+            "require": "./lib/index.cjs",
+            "types": "./lib/index.d.ts"
+        },
+        "./package.json": "./package.json",
+        "./commands": {
+            "import": "./lib/commands.mjs",
+            "require": "./lib/commands.cjs",
+            "types": "./lib/commands.d.ts"
+        }
+    },
+    "type": "module",
+    "engines": {
+        "node": ">=18.0.0"
+    },
     "license": "AGPL-3.0",
     "keywords": [
         "chatbot",
@@ -29,11 +47,11 @@
     },
     "homepage": "https://github.com/ChatLunaLab/chatluna-preset-market#readme",
     "devDependencies": {
-        "koishi": "^4.17.5",
+        "koishi": "^4.17.9",
         "koishi-plugin-chatluna": "^1.0.0-beta.44"
     },
     "peerDependencies": {
-        "koishi": "^4.17.0",
+        "koishi": "^4.17.9",
         "koishi-plugin-chatluna": "^1.0.0-beta.44"
     },
     "scripts": {
