--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,20 @@
 {
-  "compilerOptions": {
-    "rootDir": "src",
-    "outDir": "lib",
-    "target": "es2020",
-    "module": "commonjs",
-    "declaration": true,
-    "composite": true,
-    "incremental": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "moduleResolution": "node",
-    "jsx": "react-jsx",
-    "jsxImportSource": "@satorijs/element",
-  },
-  "include": [
-    "src",
-  ],
+    "compilerOptions": {
+        "rootDir": "src",
+        "outDir": "lib",
+        "target": "es2020",
+        "module": "esnext",
+        "declaration": true,
+        "composite": true,
+        "incremental": true,
+        "skipLibCheck": true,
+        "emitDeclarationOnly": true,
+        "esModuleInterop": true,
+        "moduleResolution": "bundler",
+        "jsx": "react-jsx",
+        "jsxImportSource": "@satorijs/element"
+    },
+    "include": [
+        "src"
+    ]
 }
