--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "koishi-plugin-chatluna-preset-market",
   "description": "preset market for chatluna",
-  "version": "1.0.15",
+  "version": "1.1.0",
   "main": "lib/index.cjs",
   "module": "lib/index.mjs",
   "typings": "lib/index.d.ts",
@@ -42,12 +42,12 @@
   },
   "homepage": "https://github.com/ChatLunaLab/chatluna-preset-market#readme",
   "devDependencies": {
-    "koishi": "^4.18.1",
-    "koishi-plugin-chatluna": "^1.0.0-beta.100"
+    "koishi": "^4.18.4",
+    "koishi-plugin-chatluna": "^1.0.1-alpha.1"
   },
   "peerDependencies": {
-    "koishi": "^4.18.1",
-    "koishi-plugin-chatluna": "^1.0.0-beta.40"
+    "koishi": "^4.18.4",
+    "koishi-plugin-chatluna": "^1.0.1-alpha.1"
   },
   "scripts": {
     "build": "yakumo build",
